# graphql-server

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  schema.py
