[tool.poetry]
name = "graphql-server"
version = "0.1.0"
description = "A GraphQL server to be used for testing prototype clients consuming a GraphQL endpoint."
authors = ["Somraj Saha <somraj.1994@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
strawberry-graphql = {extras = ["debug-server"], version = "^0.123.3"}

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
